--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-color: var(--Light-Grayish-Blue);
 }
 
 /*Header*/
@@ -28,15 +29,16 @@ body{
 .header{
     font-family: 'Open Sans', sans-serif;
     color: var(--Very-Dark-Blue);
-    margin: 8px 20px;
+    padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
 }
 
 .logo img{
      width: 100%;
-     max-width: 85px;
+     max-width: 90px;
 }
 
 .menu ul{
@@ -45,10 +47,16 @@ body{
 }
 
 .menu li{
-    margin: 9px;
-    font-size: .9em;
-    font-weight: 400;
+    display: block;
+    margin-left: 10px;
+    font-size: .8em;
+    font-weight: 700;
     
+}
+
+.menu li a{
+    display: block;
+    padding: 10px;
 }
 .menu a{
     text-decoration: none;
@@ -88,6 +96,7 @@ body{
 .contents-1 p{
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
+    line-height: 1.5em;
 
 }
 
@@ -118,7 +127,123 @@ body{
     border-radius: 5px;
     border: none;
     padding: 11px 123px 11px 123px;
+    transition: .3s;
 }
+
+.button:hover{
+    background-color: var(--Very-Dark-Blue);
+    transition: .3s ease;
+}
+
+/*section 2*/
+.illustration-2{
+    display: block;
+    padding-top: 90px;
+}
+.content-main-2{
+    text-align: center;
+    color: var(--Very-Dark-Blue);
+    
+}
+
+.content-main-2 h3{  
+    font-family: 'Raleway', sans-serif;
+    font-size: 1.10em;
+    font-weight: 700;
+    padding-bottom: 10px;
+    text-align: center;
+}
+
+.content-main-2 p{
+    line-height: 1.6em;
+    color: var(--Desaturated-Blue);
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: left;
+
+}
+
+
+.button-type2{
+    display: block;
+    margin: auto;
+    padding-top: 20px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1em;
+    text-decoration: none;
+    color: rgb(0, 128, 105);
+    border-bottom: 1px solid  rgb(0, 128, 105);
+    width: 170px;
+    height: 26px;
+
+}
+
+.icon-arrow{
+    width: 18px;
+    position: relative;
+    top: 4.11px;
+}
+
+.quote{
+    display: block;
+    margin: auto;
+    margin-top: 60px;
+    background-color: white;
+    padding: 35px;
+    width: 68%;
+    height: 220px;
+}
+
+.icon-quotes{
+    width: 15px;
+}
+
+.quote p{
+    font-family: 'Raleway', sans-serif;
+    margin: auto;
+    font-weight: 600;
+    font-size: .9em;
+    line-height: 1.7em;
+    color: var(--Very-Dark-Blue);
+
+}
+
+
+.author{
+    display: block;
+    position: relative;
+    top: 30px;
+    font-family: 'Raleway', sans-serif;
+}
+
+.name-author{
+    display: inline-block;
+    padding-left: 8px;
+}
+
+.name-author p{
+    position: relative;
+    bottom: 13px;
+    font-size: .7em;
+}
+
+.name-author h3{
+    font-size: .9em;
+    width: 180px;
+    color: var(--Very-Dark-Blue);
+}
+
+
+.avatar-testimonial{
+    position: relative;
+    bottom: 10px;
+    border-radius: 50%;
+    width: 35px;
+}
+
+
 
 
 
